manifests/budgeit-fe/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budgeit-fe-deployment
  labels:
    app: budgeit-fe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budgeit-fe
  template:
    metadata:
      labels:
        app: budgeit-fe
    spec:
      containers:
        - name: budgeit-fe
          image: crccheck/hello-world
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
