manifests/budgeit-fe/service.yml
apiVersion: v1
kind: Service
metadata:
  name: budgeit-fe
spec:
  selector:
    app: budgeit-fe
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
