manifests/budgeit-fe/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budgeit-fe
  namespace: budgeit-fe
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - budgeit.xyz
      secretName: budgeit-fe-tls
  rules:
    - host: budgeit.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: budgeit-fe
                port:
                  number: 80
